// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Recovery Phrase Chips Component should match snapshot 1`] = `
<div>
  <div
    class="mm-box mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-column"
  >
    <div
      class="mm-box recovery-phrase__secret mm-box--display-grid mm-box--width-full mm-box--background-color-background-section mm-box--rounded-lg"
    >
      <div
        class="mm-box recovery-phrase__chips mm-box--display-grid mm-box--justify-content-center mm-box--align-items-center"
        data-quiz-words="[]"
        data-recovery-phrase="debris:dizzy:just:program:just:float:decrease:vacant:alarm:reduce:speak:stadium"
        data-testid="recovery-phrase-chips"
      >
        <div
          class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
          data-testid="recovery-phrase-chip-0"
        >
          <span
            class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
          >
            1
            .
          </span>
          <span
            class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
          >
            debris
          </span>
        </div>
        <div
          class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
          data-testid="recovery-phrase-chip-1"
        >
          <span
            class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
          >
            2
            .
          </span>
          <span
            class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
          >
            dizzy
          </span>
        </div>
        <div
          class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
          data-testid="recovery-phrase-chip-2"
        >
          <span
            class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
          >
            3
            .
          </span>
          <span
            class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
          >
            just
          </span>
        </div>
        <div
          class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
          data-testid="recovery-phrase-chip-3"
        >
          <span
            class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
          >
            4
            .
          </span>
          <span
            class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
          >
            program
          </span>
        </div>
        <div
          class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
          data-testid="recovery-phrase-chip-4"
        >
          <span
            class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
          >
            5
            .
          </span>
          <span
            class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
          >
            just
          </span>
        </div>
        <div
          class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
          data-testid="recovery-phrase-chip-5"
        >
          <span
            class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
          >
            6
            .
          </span>
          <span
            class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
          >
            float
          </span>
        </div>
        <div
          class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
          data-testid="recovery-phrase-chip-6"
        >
          <span
            class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
          >
            7
            .
          </span>
          <span
            class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
          >
            decrease
          </span>
        </div>
        <div
          class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
          data-testid="recovery-phrase-chip-7"
        >
          <span
            class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
          >
            8
            .
          </span>
          <span
            class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
          >
            vacant
          </span>
        </div>
        <div
          class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
          data-testid="recovery-phrase-chip-8"
        >
          <span
            class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
          >
            9
            .
          </span>
          <span
            class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
          >
            alarm
          </span>
        </div>
        <div
          class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
          data-testid="recovery-phrase-chip-9"
        >
          <span
            class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
          >
            10
            .
          </span>
          <span
            class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
          >
            reduce
          </span>
        </div>
        <div
          class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
          data-testid="recovery-phrase-chip-10"
        >
          <span
            class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
          >
            11
            .
          </span>
          <span
            class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
          >
            speak
          </span>
        </div>
        <div
          class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
          data-testid="recovery-phrase-chip-11"
        >
          <span
            class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
          >
            12
            .
          </span>
          <span
            class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
          >
            stadium
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Recovery Phrase Chips Component should match snapshot of confirm recovery phrase with inputs of indicies to check 1`] = `
<div>
  <div
    class="mm-box mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-column"
  >
    <div
      class="mm-box recovery-phrase__secret mm-box--display-grid mm-box--width-full mm-box--background-color-background-section mm-box--rounded-lg"
    >
      <div
        class="mm-box recovery-phrase__chips mm-box--display-grid mm-box--justify-content-center mm-box--align-items-center"
        data-quiz-words="[]"
        data-recovery-phrase="debris:dizzy:just:program:just:float:decrease:vacant:alarm:reduce:speak:stadium"
        data-testid="recovery-phrase-chips"
      >
        <div
          class="mm-box mm-text-field mm-text-field--size-md mm-text-field--disabled mm-text-field--truncate mm-box--padding-right-0 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
        >
          <span
            class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
          >
            1
            .
          </span>
          <input
            autocomplete="off"
            class="mm-box mm-text mm-input mm-input--disable-state-styles mm-input--disabled mm-text-field__input mm-text--inherit mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-2 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
            data-testid="recovery-phrase-chip-0"
            disabled=""
            focused="false"
            readonly=""
            type="password"
            value="debris"
          />
        </div>
        <div
          class="mm-box mm-text-field mm-text-field--size-md mm-text-field--disabled mm-text-field--truncate mm-box--padding-right-0 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
        >
          <span
            class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
          >
            2
            .
          </span>
          <input
            autocomplete="off"
            class="mm-box mm-text mm-input mm-input--disable-state-styles mm-input--disabled mm-text-field__input mm-text--inherit mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-2 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
            data-testid="recovery-phrase-chip-1"
            disabled=""
            focused="false"
            readonly=""
            type="password"
            value="dizzy"
          />
        </div>
        <div
          class="mm-box mm-text-field mm-text-field--size-md mm-text-field--disabled mm-text-field--truncate mm-box--padding-right-0 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
        >
          <span
            class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
          >
            3
            .
          </span>
          <input
            autocomplete="off"
            class="mm-box mm-text mm-input mm-input--disable-state-styles mm-input--disabled mm-text-field__input mm-text--inherit mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-2 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
            data-testid="recovery-phrase-chip-2"
            disabled=""
            focused="false"
            readonly=""
            type="password"
            value="just"
          />
        </div>
        <div
          class="mm-box mm-text-field mm-text-field--size-md mm-text-field--disabled mm-text-field--truncate mm-box--padding-right-0 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
        >
          <span
            class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
          >
            4
            .
          </span>
          <input
            autocomplete="off"
            class="mm-box mm-text mm-input mm-input--disable-state-styles mm-input--disabled mm-text-field__input mm-text--inherit mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-2 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
            data-testid="recovery-phrase-chip-3"
            disabled=""
            focused="false"
            readonly=""
            type="password"
            value="program"
          />
        </div>
        <div
          class="mm-box mm-text-field mm-text-field--size-md mm-text-field--disabled mm-text-field--truncate mm-box--padding-right-0 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
        >
          <span
            class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
          >
            5
            .
          </span>
          <input
            autocomplete="off"
            class="mm-box mm-text mm-input mm-input--disable-state-styles mm-input--disabled mm-text-field__input mm-text--inherit mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-2 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
            data-testid="recovery-phrase-chip-4"
            disabled=""
            focused="false"
            readonly=""
            type="password"
            value="just"
          />
        </div>
        <div
          class="mm-box mm-text-field mm-text-field--size-md mm-text-field--disabled mm-text-field--truncate mm-box--padding-right-0 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
        >
          <span
            class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
          >
            6
            .
          </span>
          <input
            autocomplete="off"
            class="mm-box mm-text mm-input mm-input--disable-state-styles mm-input--disabled mm-text-field__input mm-text--inherit mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-2 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
            data-testid="recovery-phrase-chip-5"
            disabled=""
            focused="false"
            readonly=""
            type="password"
            value="float"
          />
        </div>
        <div
          class="mm-box mm-text-field mm-text-field--size-md mm-text-field--disabled mm-text-field--truncate mm-box--padding-right-0 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
        >
          <span
            class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
          >
            7
            .
          </span>
          <input
            autocomplete="off"
            class="mm-box mm-text mm-input mm-input--disable-state-styles mm-input--disabled mm-text-field__input mm-text--inherit mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-2 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
            data-testid="recovery-phrase-chip-6"
            disabled=""
            focused="false"
            readonly=""
            type="password"
            value="decrease"
          />
        </div>
        <div
          class="mm-box mm-text-field mm-text-field--size-md mm-text-field--disabled mm-text-field--truncate mm-box--padding-right-0 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
        >
          <span
            class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
          >
            8
            .
          </span>
          <input
            autocomplete="off"
            class="mm-box mm-text mm-input mm-input--disable-state-styles mm-input--disabled mm-text-field__input mm-text--inherit mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-2 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
            data-testid="recovery-phrase-chip-7"
            disabled=""
            focused="false"
            readonly=""
            type="password"
            value="vacant"
          />
        </div>
        <div
          class="mm-box mm-text-field mm-text-field--size-md mm-text-field--disabled mm-text-field--truncate mm-box--padding-right-0 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
        >
          <span
            class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
          >
            9
            .
          </span>
          <input
            autocomplete="off"
            class="mm-box mm-text mm-input mm-input--disable-state-styles mm-input--disabled mm-text-field__input mm-text--inherit mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-2 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
            data-testid="recovery-phrase-chip-8"
            disabled=""
            focused="false"
            readonly=""
            type="password"
            value="alarm"
          />
        </div>
        <div
          class="mm-box mm-text-field mm-text-field--size-md mm-text-field--disabled mm-text-field--truncate mm-box--padding-right-0 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
        >
          <span
            class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
          >
            10
            .
          </span>
          <input
            autocomplete="off"
            class="mm-box mm-text mm-input mm-input--disable-state-styles mm-input--disabled mm-text-field__input mm-text--inherit mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-2 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
            data-testid="recovery-phrase-chip-9"
            disabled=""
            focused="false"
            readonly=""
            type="password"
            value="reduce"
          />
        </div>
        <div
          class="mm-box mm-text-field mm-text-field--size-md mm-text-field--disabled mm-text-field--truncate mm-box--padding-right-0 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
        >
          <span
            class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
          >
            11
            .
          </span>
          <input
            autocomplete="off"
            class="mm-box mm-text mm-input mm-input--disable-state-styles mm-input--disabled mm-text-field__input mm-text--inherit mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-2 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
            data-testid="recovery-phrase-chip-10"
            disabled=""
            focused="false"
            readonly=""
            type="password"
            value="speak"
          />
        </div>
        <div
          class="mm-box mm-text-field mm-text-field--size-md mm-text-field--disabled mm-text-field--truncate mm-box--padding-right-0 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
        >
          <span
            class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
          >
            12
            .
          </span>
          <input
            autocomplete="off"
            class="mm-box mm-text mm-input mm-input--disable-state-styles mm-input--disabled mm-text-field__input mm-text--inherit mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-2 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
            data-testid="recovery-phrase-chip-11"
            disabled=""
            focused="false"
            readonly=""
            type="password"
            value="stadium"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
